--- a/index.html
+++ b/index.html
@@ -82,20 +82,6 @@
                     <a class="nav-link page-scroll" href="#kontak">Kontak</a>
                 </li>
             </ul>
-            <span class="nav-item social-icons">
-                <span class="fa-stack">
-                    <a href="#your-link">
-                        <i class="fas fa-circle fa-stack-2x facebook"></i>
-                        <i class="fab fa-facebook-f fa-stack-1x"></i>
-                    </a>
-                </span>
-                <span class="fa-stack">
-                    <a href="#your-link">
-                        <i class="fas fa-circle fa-stack-2x twitter"></i>
-                        <i class="fab fa-twitter fa-stack-1x"></i>
-                    </a>
-                </span>
-            </span>
         </div>
     </nav> <!-- end of navbar -->
     <!-- end of navigation -->
@@ -108,9 +94,9 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="text-container">
-                            <h1><span class="turquoise">Hai Semua</span>  Saya Masna Dita Garini</h1>
+                            <h1><span class="turquoise">Hai Semua!</span>  Saya Masna Dita Garini</h1>
                             <p class="p-large">Cosmetology Engineering</p>
-                            <a class="btn-solid-lg page-scroll" href="#services">Download CV</a>
+                            <a class="btn-solid-reg page-scroll" href="#services">Download CV</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
