--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="text-container">
-                            <h1><span class="turquoise">Hai Semua!</span>  Saya Masna Dita Garini</h1>
+                            <h1><span class="turquoise">Hai Semua,</span>  Saya Masna Dita Garini</h1>
                             <p class="p-large">Cosmetology Engineering</p>
                             <a class="btn-solid-reg page-scroll" href="#services">Download CV</a>
                         </div> <!-- end of text-container -->
