--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                         <div class="text-container">
                             <h1><span class="turquoise">Hai Semua,</span>  Saya Masna Dita Garini</h1>
                             <p class="p-large">Cosmetology Engineering</p>
-                            <a class="btn-solid-reg page-scroll" href="#services">Download CV</a>
+                            <a class="btn-solid-reg page-scroll" 
+                            href="https://drive.google.com/file/d/1YWnfEDD5iqk_TubizPuCwoJDURTaa2lt/view?usp=sharing">Download CV</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
